--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -1,3 +1,20 @@
-<p>
-  register works!
-</p>
+<h2 class="page-header">Register</h2>
+<form (submit)="onRegisterSubmit()">
+  <div class="form-group">
+    <label for="form-name">Name</label>
+    <input type="text" [(ngModel)]="name" name="name" id="form-name" class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="form-username">Username</label>
+    <input type="text" [(ngModel)]="username" name="username" id="form-username" class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="form-email">Email</label>
+    <input type="email" [(ngModel)]="email" name="email" id="form-email" class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="form-password">Password</label>
+    <input type="password" [(ngModel)]="password" name="password" id="form-password" class="form-control">
+  </div>
+  <input type="submit" class="btn btn-primary" value="Submit">
+</form>
