--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -1,3 +1,12 @@
-<p>
-  login works!
-</p>
+<h2 class="page-header">Login</h2>
+<form (submit)="onLoginSubmit()">
+  <div class="form-group">
+    <label for="login-username">Username</label>
+    <input type="text" class="form-control" id="login-username" [(ngModel)] = "username" name="username">
+  </div>
+  <div class="form-group">
+    <label for="login-password">Password</label>
+    <input type="password" class="form-control" id="login-password" [(ngModel)] = "password" name="password">
+  </div>
+  <input type="submit" value="Login" class="btn btn-primary">
+</form>
